fixes layout issues

--- a/design.css
+++ b/design.css
@@ -34,7 +34,7 @@ body {
     display: block;
     height: 60px;
     border-radius: var(--radius);
-    font-size: 30px;
+    font-size: 3em;
     line-height: 50px;
     text-align: center;
 
@@ -60,7 +60,7 @@ body {
 }
 
 #bumper .title {
-    font-size: xx-large;
+    font-size: 5fr;
 
     color: #ffffff;
     text-shadow: -1px -1px 0 #666666,
@@ -186,7 +186,7 @@ button{
     border-bottom-left-radius: var(--radius);
 
 
-    font-size: 30px;
+    font-size: 3em;
     line-height: 50px;
     text-align: center;
 }
